--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,30 @@
   .image-2{
     @apply h-80 w-96 p-7
   }
+  .image-1{
+    @apply h-44 w-60
+  }
   .cart{
     @apply h-60 w-9/12 mx-auto
   }
+           
+  .btn-grad {
+    background-image: linear-gradient(to right, #77A1D3 0%, #79CBCA  51%, #77A1D3  100%);
+    margin: 10px;
+    padding: 15px 45px;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 200% auto;
+    color: white;            
+    box-shadow: 0 0 20px #eee;
+    border-radius: 10px;
+    display: block;
+  }
+
+  .btn-grad:hover {
+    background-position: right center; /* change the direction of the change here */
+    color: #fff;
+    text-decoration: none;
+  }
+ 
